fix horizontal scroll issue

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   top: 0;
   left: 0;
   background-color: #212428;
+  overflow-x: hidden;
 }
 
 .profile {
